# emoprint

./: .gitignore  LICENSE  README.md  README.rst  makefile  pyproject.toml
.github/workflows/: python.yml
emoprint/: __init__.py  emolist.txt  emoprint.py  nlp_emoprint.py  pick_emoji.py
emoprint/pickled/: refined_dataset.p
tests/: test_emoprint.py
train_model/: prepare_dataaset.py  prepare_embedding_senses.py
train_model/pickled/: embedded_vector_map.p
