[tool.poetry]
name = "emoprint"
version = "0.1.1"
description = "'The most uesless Python library ever' -- Cheuk 😅 Emoprint let you have more fun with your buildin print function by adding a random emoji to whatever you are printing!"
authors = ["Cheukting <cheukting.ho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
