[tool.poetry]
name = "emoprint"
version = "0.1.1"
license = "MIT"
description = "'The most uesless Python library ever' -- Cheuk 😅 Emoprint let you have more fun with your buildin print function by adding a random emoji to whatever you are printing!"
authors = ["Cheukting <cheukting.ho@gmail.com>"]
homepage = "https://github.com/Cheukting/emoprint"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.6, < 3.8"
easybert =  { git = "https://github.com/Cheukting/easy-bert"}
scipy = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tqdm = "*"
easybert =  { git = "https://github.com/Cheukting/easy-bert"}
scipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
